# urlocator

./: .travis.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.builds/: freebsd.yml  linux.yml  rustfmt.yml  style.yml
src/: lib.rs  scheme.rs  tests.rs
