[package]
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/chrisduerr/urlocator.git"
description = "Locate URLs in character streams"
documentation = "https://docs.rs/urlocator"
keywords = ["stream", "url", "parser"]
exclude = ["/.travis.yml"]
license = "MIT/Apache-2.0"
categories = ["parsing"]
readme = "README.md"
name = "urlocator"
version = "0.1.0"
edition = "2018"

[dependencies]
